YelpCamp/v3/readme.md
#YelpCamp Initial

* Add Landing Page
* Add Campground Page that Lists all Campground 

Each CampGround has:
* Name
* Image



#Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap



#Creating New Campgrounds
* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form



#Style the Campgrounds page
* Add a better header/title
* Make Campgrounds display in a grid



#Style the Navbar and Form
* Add a navbar to all templates
* Style the new Campground Form



#Adding Mongoose
* Install and configure mongoose
* Setup campground model
* Use Campground model inside of our routes!



#Show Page
* Review the RESTful routes we've seen so far
* Add description to our campground model
* Show db.collection.drop()
* Add a show route/template



#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly



#Add Seeds File
* Add a seeds.js file
* Run the seeds file every time the server starts



#Add the Comment model!
* Make our errors go away!
* Display comments on campground show page